--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -1,11 +1,9 @@
 {% extends 'OroUIBundle:Default:index.html.twig' %}
 {% oro_title_set({titleTemplate : "%code% - %status%" , params: {'%code%': status_code, '%status%' :status_text }, force : true}) %}
-{% block hash_nav %}
-    <script type="text/javascript">
-        require(['oronavigation/js/navigation'], function (Navigation) {
-            Navigation.enable = false;
-        });
-    </script>
+{% block hash_nav %}{% endblock %}
+{% block head %}
+    <meta name="error" content="{{ status_code }}" />
+    {{ parent() }}
 {% endblock %}
 {% block bodyClass %}error-page{% endblock %}
 
